--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running.">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sports, exercise/"
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sports, exercise">
     <title>Love Running</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -12,6 +12,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
 <body>
-    
+    <!--Heading-->
+    <header>Header</header>
+
+    <!--Main Content-->
+    <main>Main Content</main>
+
+    <!--Footer-->
+    <footer>Footer</footer>
 </body>
 </html>
