--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <!--Embedded Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,12 @@
 </head>
 <body>
     <!--Heading-->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+           <h1 id="logo">Love Running</h1> 
+        </a>
+        
+    </header>
 
     <!--Main Content-->
     <main>Main Content</main>
