Add breakpoints for larger devices fixed toggle posistioning

--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">X</label>
-           <nav>
+        <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign up</a></li>
             </ul>
-           </nav>
-        </a>
-        
+        </nav>
     </header>
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+        Main Content
+    </main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        Footer
+    </footer>
 </body>
 </html>
