--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,12 +13,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/4767b2231b.js" crossorigin="anonymous"></script>
 
     <!--Embedded Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!--Heading-->
     <header>
@@ -42,7 +47,17 @@
 
     <!--Footer-->
     <footer>
-        Footer
+        <ul id="social-list">
+            <li href="https://www.facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our facebook (opens in a new tab)"><i class="fa-brands fa-facebook fa-2xl"></i></li>
+                <li href="https://www.instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our instagram (opens in a new tab)"><i class="fa-brands fa-instagram fa-2xl"></i></li>
+            <li><li href="https://www.instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our instagram (opens in a new tab)"><i class="fa-brands fa-instagram fa-2xl"></i></li></li>
+        </ul>
     </footer>
+    <!--Social icon Kit-->
+    <script src="https://kit.fontawesome.com/4767b2231b.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
