Add footer flplay an, padding and alignment. Add social icons to footer

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
     <!--Footer-->
     <footer>
-        <ul id="social-list">
-            <li href="https://www.facebook.com" target="_blank" rel="noopener"
-                aria-label="Visit our facebook (opens in a new tab)"><i class="fa-brands fa-facebook fa-2xl"></i></li>
+            <ul id="social-list">
+                <li href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook (opens in a new tab)"><i class="fa-brands fa-facebook fa-2xl"></i></li>
                 <li href="https://www.instagram.com" target="_blank" rel="noopener"
-                aria-label="Visit our instagram (opens in a new tab)"><i class="fa-brands fa-instagram fa-2xl"></i></li>
-            <li><li href="https://www.instagram.com" target="_blank" rel="noopener"
-                aria-label="Visit our instagram (opens in a new tab)"><i class="fa-brands fa-instagram fa-2xl"></i></li></li>
-        </ul>
+                    aria-label="Visit our instagram (opens in a new tab)"><i class="fa-brands fa-instagram fa-2xl"></i></li>
+                <li href="https://www.X.com" target="_blank" rel="noopener"
+                    aria-label="Visit our x-twitter (opens in a new tab)"><i class="fa-brands fa-x-twitter fa-2xl"></i></li>
+            </ul>
     </footer>
     <!--Social icon Kit-->
     <script src="https://kit.fontawesome.com/4767b2231b.js" crossorigin="anonymous"></script>
