rolled back and removed the hero rule set as it was not behaving as expected on smaller devices some small changes to media queries and padding in footer

--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign up</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li><a href="signup.html" class="active">Sign up</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Main Content-->
     <main>
-        Main Content
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Pheonix park</h3>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
