--- a/index.html
+++ b/index.html
@@ -3,49 +3,47 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running.">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sports, exercise">
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
-
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/4767b2231b.js" crossorigin="anonymous"></script>
-
-    <!--Embedded Font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
-    <!--Heading-->
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
-                <li><a href="signup.html" class="active">Sign up</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
 
-    <!--Main Content-->
+    <!-- Main content -->
     <main>
         <section id="hero">
             <div id="cover-text">
                 <h2>Love Running</h2>
-                <h3>Dublin Docklands & Pheonix park</h3>
+                <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
         <section id="reasons">
@@ -78,26 +76,41 @@
                             you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
-            </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg"></div>
+                </div>
             </div>
         </section>
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer>
-            <ul id="social-list">
-                <li href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook (opens in a new tab)"><i class="fa-brands fa-facebook fa-2xl"></i></li>
-                <li href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram (opens in a new tab)"><i class="fa-brands fa-instagram fa-2xl"></i></li>
-                <li href="https://www.X.com" target="_blank" rel="noopener"
-                    aria-label="Visit our x-twitter (opens in a new tab)"><i class="fa-brands fa-x-twitter fa-2xl"></i></li>
-                <li href="https://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube fa-2xl"></i></li>
-            </ul>
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
-    <!--Social icon Kit-->
-    <script src="https://kit.fontawesome.com/4767b2231b.js" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
