--- a/index.html
+++ b/index.html
@@ -82,40 +82,40 @@
             </div>
         </section>
 
-        <!--Meetup times section-->
+        <!-- Meetup Times section -->
         <section id="meetups">
-            <h2 class="hidden-heading">Meet-up Times</h2>
+            <h2>Meet-up Times</h2>
             <div id="times">
                 <div>
-                    <h3>Urban <i class="fa-solid fa-city fa-lg"></i></h3>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
                     <p>Monday</p>
                     <p>5K</p>
                     <p>The Marker Hotel</p>
                     <p>18:30</p>
                 </div>
                 <div>
-                    <h3>Trail <i class="fa-solid fa-tree fa-lg"></i></h3>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
                     <p>Wednesday</p>
                     <p>10K</p>
-                    <p>The Pheonix Park</p>
+                    <p>The Phoenix Park</p>
                     <p>18:30</p>
                 </div>
                 <div>
-                    <h3>Urban <i class="fa-solid fa-city fa-lg"></i></h3>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
                     <p>Friday</p>
                     <p>5K</p>
                     <p>The Marker Hotel</p>
                     <p>18:30</p>
                 </div>
                 <div>
-                    <h3>Trail <i class="fa-solid fa-tree fa-lg"></i></h3>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
                     <p>Saturday</p>
                     <p>10K</p>
                     <p>The Phoenix Park</p>
-                    <p>9:30</p>
+                    <p>09:30</p>
                 </div>
                 <div>
-                    <h3>Coffee <i class="fa-solid fa-mug-hot fa-lg"></i></h3>
+                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
                     <p>Sunday</p>
                     <p>0K</p>
                     <p>The Marker Hotel</p>
