--- a/signup.html
+++ b/signup.html
@@ -72,6 +72,7 @@
     </main>
 
     <!-- Footer -->
+     <footer></footer>
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
